# hackup

./: .gitignore  LICENSE  README.md  doc.cfg  hackup.cabal
src/: Main.hs
src/Hackup/: Action.hs  Config.hs  Driver.hs  Errors.hs  Opts.hs  Selectors.hs  Types.hs
src/Hackup/Config/: Fields.hs  Parser.hs  Selectors.hs  Types.hs  Validation.hs
src/Hackup/Driver/: Core.hs  DryRun.hs  IODriver.hs
testsuite/: HackupTests.hs
testsuite/Hackup/: ConfigTest.hs  SelectorsTest.hs
testsuite/Hackup/Config/: ParserTest.hs  SelectorsTest.hs
testsuite/Hackup/Driver/: IODriverTest.hs
