name:           hackup
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Chewie

executable hackup
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   lens >= 4.0.7 && < 4.1,
                   validation >= 0.3.2 && < 0.4,
                   optparse-applicative >= 0.8.0 && < 0.9,
                   mtl >= 2.1.2 && < 2.2,
                   transformers >= 0.3.0 && < 0.4,
                   mmorph >= 1.0.2 && < 1.1,
                   yaml >= 0.8.8.1 && < 0.9,
                   text >= 1.1.0.1 && < 1.2,
                   containers >= 0.5.0.0 && < 0.6,
                   unordered-containers >= 0.2.3.3 && < 0.3,
                   bytestring >= 0.10.0.2 && < 0.11,
                   semigroups >= 0.12.2 && < 0.13,
                   filemanip >= 0.3.6.2 && < 0.4,
                   Glob >= 0.7.2 && < 0.8,
                   regex-base >= 0.93.2 && < 0.94,
                   regex-tdfa >= 1.2.0 && < 1.3.0,
                   time >= 1.4.0 && < 1.5.0,
                   old-locale >= 1.0.0.5 && < 1.1,
                   errors >= 1.4.6 && < 1.5
  ghc-options:     -Wall
  other-modules:   
                   Hackup.Action,
                   Hackup.Config,
                   Hackup.Config.Fields,
                   Hackup.Config.Types,
                   Hackup.Driver,
                   Hackup.Opts,
                   Hackup.Config.Parser,
                   Hackup.Selectors,
                   Hackup.Errors,
                   Hackup.Driver.Core,
                   Hackup.Driver.DryRun

test-suite HackupTests
  type:            exitcode-stdio-1.0
  ghc-options:     -Wall -rtsopts
  build-depends:   
                   base >= 4,
                   aeson >= 0.7.0.2 && < 0.8,
                   HTF >= 0.11.3.4 && < 0.12,
                   QuickCheck >= 2.7.3 && < 2.8,
                   vector >= 0.10.0 && < 0.11,
                   filepath >= 1.3.0.1 && < 1.4,
                   directory >= 1.2.1.0 && < 1.3,
                   directory-layout >= 0.4.0.1 && < 0.5,
                   temporary >= 1.2.0.2 && < 1.3
  other-modules:   
                   Hackup.Config,
                   Hackup.Config.Fields,
                   Hackup.Config.Types,
                   Hackup.Config.Parser,
                   Hackup.Config.ParserTest,
                   Hackup.Selectors,
                   Hackup.SelectorsTest,
                   Hackup.Driver.Core,
                   Hackup.Driver.DryRun
  hs-source-dirs:  
                   src,
                   testsuite
  main-is:         HackupTests.hs

